--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Core dependencies
-pystray==0.19.5
-Pillow==10.1.0
-PyQt6==6.6.1
-watchdog==3.0.0
-requests==2.31.0
+pystray>=0.19.5
+Pillow>=10.4.0
+PyQt6>=6.7.0
+watchdog>=3.0.0
+requests>=2.31.0
 
 # Compression libraries
-py7zr==0.20.8
+py7zr>=0.20.8
 
 # CLI
-click==8.1.7
-colorama==0.4.6
-rich==13.7.0
+click>=8.1.7
+colorama>=0.4.6
+rich>=13.7.0
 
 # Utilities
-python-dateutil==2.8.2
-psutil==5.9.6
+python-dateutil>=2.8.2
+psutil>=5.9.6
